--- a/CarGarage/WebContent/resources/css/style.css
+++ b/CarGarage/WebContent/resources/css/style.css
@@ -7,14 +7,14 @@
 .order-table-header{
    color: #FFFFFF;
    text-align:center;
-   background:none repeat scroll 0 0 #5076FF;
+   background:none repeat scroll 0 0 #3d8bff;
    border-bottom:1px solid #000000;  
-   padding:2px;
+   padding:4px;
 }
 
 .order-table-odd-row{
    text-align:center;
-   background:none repeat scroll 0 0 #C3D7D1;	
+   background:none repeat scroll 0 0 #86afcb;	
 }
 
 .order-table-even-row{
